--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
         <div id="calculator">
             <input id="display" readonly>
             <div id="keys">
-                <button onclick="toDisplay('+')" class="operator">+</button>
+                <button onclick="clearDisplay()" class="clearCalc">AC</button>
+                <button onclick="toDisplay('(')" class="operator">(</button>
+                <button onclick="toDisplay(')')" class="operator">)</button>
+                <button onclick="toDisplay('/')" class="operator">/</button>
                 <button onclick="toDisplay('7')">7</button>
                 <button onclick="toDisplay('8')">8</button>
                 <button onclick="toDisplay('9')">9</button>
-                <button onclick="toDisplay('-')" class="operator">-</button>
+                <button onclick="toDisplay('*')" class="operator">*</button>
                 <button onclick="toDisplay('4')">4</button>
                 <button onclick="toDisplay('5')">5</button>
                 <button onclick="toDisplay('6')">6</button>
-                <button onclick="toDisplay('*')" class="operator">*</button>
+                <button onclick="toDisplay('-')" class="operator">-</button>
                 <button onclick="toDisplay('1')">1</button>
                 <button onclick="toDisplay('2')">2</button>
                 <button onclick="toDisplay('3')">3</button>
-                <button onclick="toDisplay('/')" class="operator">/</button>
+                <button onclick="toDisplay('+')" class="operator">+</button>
                 <button onclick="toDisplay('0')">0</button>
+                <button onclick="toDisplay('.')">.</button>
+                <button onclick="toDisplay('x')"><--</button>
                 <button onclick="calc()" class="operator">=</button>
-                <button onclick="clearDisplay()" class="clearCalc">C</button>
+                
+
             </div>
         </div>
         <script src="index.js"></script>
